# chat-agent

./: .env.example  .gitignore  .secrets.baseline  AGENTS.md  CLAUDE.md  README.md  chat-agent_AI聊天代理_分析報告_20260305.md  pyproject.toml
cfgs/: agent.yaml  basic.yaml  config.yaml  supervisor.yaml
docs/dev/: agent-task-system.md  codex-cache-survival.md  copilot-agent-hint.md  copilot-staged-planning.md  gmail-oauth-setup.md  goal.md  heartbeat.md  index.md  macos-app-tools.md  provider-api-spec.md  provider-architecture.md  session-debug-logs.md  skill-runtime-governance.md  skills-guide.md  subfolder-template.md  token-only-context-policy.md  web-dashboard.md
scripts/: analyze_openrouter_activity.py  click_test.py  eval_conscience_agent.py  eval_haiku45_profile_ab.py  gmail_auth.py  nano_banana.py  probe_ollama_native.py  repro_memory_edit.py  repro_memory_edit_dedup.py  scroll_test.py  test_cache_breakpoint_move.py  validate_llm.py  verify_anthropic_cache.py  verify_cache_behavior.py  verify_claude_code_cache_behavior.py  verify_openai_cache.py
src/chat_agent/: __init__.py  __main__.py  brain_prompt_policy.py  cli.py  control.py  macos_permissions_warmup.py  timezone_utils.py
src/chat_proxy/: __init__.py  __main__.py
src/chat_supervisor/: __main__.py  check.py  config.py  (+6 more)
tests/: conftest.py  test_bm25_index_descriptions.py  test_bm25_search.py  test_chat_proxy_cli.py  test_claude_code_proxy.py  test_claude_code_proxy_auth.py  test_codex_proxy.py  test_codex_proxy_auth.py  test_context_builder.py  test_context_refresh.py  test_control.py  test_conversation.py  test_copilot_proxy.py  test_copilot_proxy_auth.py  test_executor.py  test_grok_proxy_auth.py  test_icloud_sync_awareness.py  test_input.py  test_macos_permissions_warmup.py  test_main_tty.py  test_memory_backup.py  test_memory_editor.py  test_memory_editor_planner.py  test_memory_hooks.py  test_memory_index_kind.py  test_memory_tool_analysis.py  test_memory_writer.py  test_pdf_utils.py  test_security.py  test_send_message_batch_guidance.py  test_shell_task.py  test_tools.py  test_turn_timing.py  test_web_fetch.py  test_web_search.py
(+629 files in other folders)
