[project]
name = "chat-agent"
version = "0.1.0"
description = "An AI companion that feels alive"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "discord.py-self<2.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "textual>=0.82",
    "Pillow>=10.0",
    "pyautogui>=0.9.54",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jieba>=0.42",
    "rank-bm25>=0.2.2",
]

[project.scripts]
chat-cli = "chat_agent.__main__:run"
chat-supervisor = "chat_supervisor.__main__:main"
copilot-proxy = "copilot_proxy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chat_agent", "src/chat_supervisor", "src/copilot_proxy"]

[tool.uv.workspace]
members = [
    ".agent/uv-test",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "anthropic>=0.84.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.0",
]
